nginx-ingress-app/tomcat/tomcat-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-app
  namespace: nginx-ingress
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: bitnami/tomcat:latest
        ports:
        - containerPort: 8080
