nginx-ingress-app/tomcat/tom-ingress-1.yml
apiVersion: "networking.k8s.io/v1beta1"
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - tomcat.app.com
    secretName: tom-tls       
  rules:
  - host: tomcat.app.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
