nginx-ingress-app/tomcat/tom-ingress.yml
apiVersion: "networking.k8s.io/v1beta1"
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tomcat.app.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
